# riil-ai

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
config/rules/: default.md
eko/domain/: prompt.py  step.py  workflow.py
eko/interface/: cli.py
riil/config/: schema.py
riil/core/: callback.py
riil/domain/: prompt.py  step.py  types.py  workflow.py
riil/infrastructure/callbacks/: resolver.py  simple.py  structured.py
riil/infrastructure/llms/: base.py  openai.py  resolver.py
riil/infrastructure/utils/: json_repair.py
riil/infrastructure/workflow/: loader.py
riil/interface/: cli.py
riil/usecases/: execute_workflow.py
tests/: conftest.py
tests/test_domain/: test_workflow.py
tests/test_infrastructure/: test_openai.py
workflows/shared/: joke.yaml
